fixed leaderboard readablilty

--- a/web_page/styles.css
+++ b/web_page/styles.css
@@ -89,7 +89,7 @@ class: CS3300
     display: flex;
     flex-direction: column;
     background-color: rgb(252, 234, 143);
-    width: 280px;
+    width: 290px;
     border-radius: 10px;
     text-align: center;
     color: black;
@@ -106,8 +106,27 @@ table, th, td{
     
 }
 
+/* Color all even-numbered rows */
+tr:nth-child(even) {
+  background-color: rgb(252, 234, 143);
+}
+
+/* Optional: Color all odd-numbered rows differently */
+tr:nth-child(odd) {
+  background-color: rgb(246, 227, 133);
+}
+
+
 .leaderboard-container label {
     margin-top: 20px;
+}
+
+.leaderboard-container text {
+    margin: 5px;
+}
+
+.leaderboard-container label {
+    font-size: 30px;
 }
 
 .full-leaderboard-containers {
